--- a/app/templates/homeTooManyChars.html
+++ b/app/templates/homeTooManyChars.html
@@ -6,23 +6,13 @@
     <link rel="stylesheet" type= "text/css" href="{{ url_for('static', filename='main.css') }}">
 </head>
 <body>
-
-    <script>
-        function pageRedirect() {
-         window.location.href = "{{ url_for('graph') }}";
-        }
-    </script>
-
     <a class="twitter-timeline" href="https://twitter.com/greswah98?ref_src=twsrc%5Etfw" data-theme="dark" data-chrome="nofooter" data-height="850px" data-width="300px" data-display="inline-block" >Tweets by greswah98</a><script src="https://platform.twitter.com/widgets.js" charset="utf-8" async ></script>
-
     <div class="container">
         <img src="{{ url_for('static', filename='logo.png') }}" alt="logo" id="logo">
         <form method="POST">
-            <input type="text" id="tweet" name="tweet" placeholder="Tweet Here">
-            <button type="button" id="button" onclick="pageRedirect()">Graph</button>
+            <input type="text" id="tweet" name="tweet" placeholder="Too many characters to tweet, must be less than 280">
+            <button type="submit" id="graph" name="graph">Graph</button>
         </form>
     </div>
-
-
 </body>
 </html>
