--- a/app/templates/map.html
+++ b/app/templates/map.html
@@ -5,6 +5,6 @@
     <title>Title</title>
 </head>
 <body>
-
+    <img src="{{ url_for('static', filename='graph.png') }}" alt="graph" id="graph">
 </body>
 </html>
