--- a/app/static/main.css
+++ b/app/static/main.css
@@ -45,3 +45,22 @@ body{
 	margin-top: 2.5%;
 	border-radius: 8px;
 }
+
+.input-container{
+	position: absolute;
+  	width: 300px;
+  	height: 200px;
+  	z-index: 15;
+  	top: 50%;
+  	left: 50%;
+  	margin: -100px 0 0 -150px;
+}
+
+#identifier{
+	margin: 0;
+  	position: absolute;
+  	top: 50%;
+  	-ms-transform: translateY(-50%);
+  	transform: translateY(-50%);
+}
+
