--- a/app/static/main.css
+++ b/app/static/main.css
@@ -47,13 +47,10 @@ body{
 }
 
 .input-container{
-	position: absolute;
-  	width: 300px;
-  	height: 200px;
-  	z-index: 15;
-  	top: 50%;
-  	left: 50%;
-  	margin: -100px 0 0 -150px;
+	display: inline-block;
+	vertical-align: top;
+	width: 1022px;
+	height: 500px;
 }
 
 #identifier{
@@ -64,3 +61,9 @@ body{
   	transform: translateY(-50%);
 }
 
+#graph{
+	display: inline-block;
+	margin-left: auto;
+	margin-right: auto;
+	width: 75%;
+}
