--- a/app/templates/bar.html
+++ b/app/templates/bar.html
@@ -8,7 +8,7 @@
 <body>
     <a class="twitter-timeline" href="https://twitter.com/greswah98?ref_src=twsrc%5Etfw" data-theme="dark" data-chrome="nofooter" data-height="850px" data-width="300px" data-display="inline-block" >Tweets by greswah98</a><script src="https://platform.twitter.com/widgets.js" charset="utf-8" async ></script>
     <div class="container">
-        <img src="{{ url_for('static', filename='bargraph.png') }}" alt="graph" id="graph">
+        <img src="{{ url_for('static', filename=url) }}" alt="graph" id="graph">
     </div>
 
 </body>
