--- a/app/templates/graph.html
+++ b/app/templates/graph.html
@@ -5,13 +5,13 @@
     <title>Graph Input</title>
     <link rel="stylesheet" type= "text/css" href="{{ url_for('static', filename='main.css') }}">
 </head>
-<body>
+<body class="InputBody">
 
     <a class="twitter-timeline" href="https://twitter.com/greswah98?ref_src=twsrc%5Etfw" data-theme="dark" data-chrome="nofooter" data-height="850px" data-width="300px" data-display="inline-block" >Tweets by greswah98</a><script src="https://platform.twitter.com/widgets.js" charset="utf-8" async ></script>
     <div class="input-container">
         <img src="{{ url_for('static', filename='logo.png') }}" alt="logo" id="logo">
         <form method="POST">
-            <input type="text" id="tweet" name="tweet" size="280" placeholder="Enter query to be graphed">
+            <input type="text" id="tweet" name="tweet" size="280" placeholder="Enter query to be graphed" style="margin-bottom: 1%">
             <button type="submit" id="pie" name="graph" value="pie">Pie Graph</button>
             <button type="submit" id="bar" name="graph" value="bar">Bar Graph</button>
         </form>
